--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,114 @@
-.App {
-  text-align: center;
+.top-block {
+  display: flex;
+  align-items: flex-end;
+  margin-bottom: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h2 a {
+  margin-right: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.news h2 {
+  font-size: 1.2rem;
+  display: inline;
+  margin-right: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.date {
+  font-size: 0.7rem;
+}
+
+ul {
+  padding-left: 3px;
+}
+
+li {
+  list-style: none;
+}
+
+.list-icon {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  background-color: black;
+  margin-right: 10px;
+}
+
+.teaser h2 {
+  font-size: 1.2rem;
+}
+
+.columns {
+  display: flex;
+}
+
+.search {
+  margin-bottom: 10px;
+}
+
+.search a {
+  margin-right: 10px;
+}
+
+.search .input-text {
+  width: 60%;
+}
+
+.example-search {
+  color: gray;
+}
+
+.course a {
+  margin-right: 10px;
+}
+
+.course span {
+  margin-right: 5px;
+}
+
+.banner {
+  height: 60px;
+  width: 60%;
+  border: 1px solid;
+}
+
+.weather {
+  margin-bottom: 10px;
+}
+
+.weather h2 {
+  font-size: 1.2rem;
+}
+
+.temperature {
+  display: flex;
+  align-items: center;
+}
+
+.weather-image {
+  width: 60px;
+  height: 60px;
+}
+
+.weather-future {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-left: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.text {
+  color: #808080;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tv h2 {
+  font-size: 1.2rem;
+  display: inline;
+}
+
+.visited h2 {
+  font-size: 1.2rem;
+}
+
+.stream h2 {
+  font-size: 1.2rem;
 }
